- fix IconOnlyComboBox not showing icon correctly - fix IconOnlyComboBox to hide clear trigger - fix to FilterBar allowing clear of filters with no change events

--- a/src/sencha/sonicle-extensions/sass/src/form/field/IconOnlyComboBox.scss
+++ b/src/sencha/sonicle-extensions/sass/src/form/field/IconOnlyComboBox.scss
@@ -1,3 +1,7 @@
+.so-icononlycombo {
+	width: 128px;
+}
+
 .so-icononlycombo .x-form-text {
 	padding-left: 6px;
 }
@@ -5,11 +9,11 @@
 	position: absolute;
 	top: 0px;
 	bottom: 0px;
-	margin-top: auto;
+	margin-top: 4px;
 	margin-bottom: auto;
 	width: 16px;
 	height: 16px;
-	margin-left: 5px;
+	margin-left: 4px;
 }
 .so-icononlycombo.x-combo-list-item > .so-icononlycombo-icon {
 	margin-left: 0px;
